--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Pantry App</h1>
   <div>
     <button id="create-kitchen">Create Kitchen</button>
-    <button id="createFoodItemButton">Create Food Item</button>
+    <button id="create-food">Create Food Item</button>
     <button id="add-food-item-to-location">Add Food Item to Location</button>
   </div>
   <script src="pantryApp.js"></script>
