--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <button id="create-food">Create Food Item</button>
     <button id="add-food-item-to-location">Add Food Item to Location</button>
   </div>
-  <script src="pantryApp.js"></script>
+  <script type = "module" src="pantryApp.js"></script>
 </body>
 </html>
