--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <button id="create-kitchen">Create Kitchen</button>
     <button id="create-food">Create Food Item</button>
     <button id="add-food-item-to-location">Add Food Item to Location</button>
+    <button id="remove-food-item-from-location">Remove Food Item from Location</button>
   </div>
   <script type = "module" src="pantryApp.js"></script>
 </body>
